--- a/readme
+++ b/readme
@@ -1,2 +1,4 @@
 del_wout_phone - Deletes all entries in the Address Book without a phone number 
 				 Useful for Android phones that uselessly aggregate contact lists from all social networks with existing ones
+
+relace_char.py - Replace characters in a file
